# yoga-c630-linux-kernel

./: ..checked-atomic-arch-fallback.h.cmd  ..checked-atomic-instrumented.h.cmd  ..checked-atomic-long.h.cmd  ..vmlinux.export.o.cmd  .Module.symvers.cmd  .built-in.a.cmd  .config  .config.old  .gitignore  .missing-syscalls.d  .modules.builtin.modinfo.cmd  .modules.order.cmd  .vmlinux.a.cmd  .vmlinux.cmd  .vmlinux.export.c  .vmlinux.o.cmd  5.9.2to5.9.3-files-changed  MAINTAINERS  MAINTAINERS.rej  Makefile  Makefile.rej  README  config-6.0.0-rc4  config-b4-efi-sorta-changes  config-debug  config-new  dmesg-5.10-usb-ddr-error  modules.order  time-script  v2-03-add-client-framebuffer  vmlinux.symvers
C630/: 0001-firmware-qcom_scm-Add-memory-protect-virtual-address.patch  0002-venus-firmware-Set-virtual-address-ranges.patch  aarch64-laptops-support-ubuntu20.04.1_all.deb  add-crda-pem-hex.sh  add-pem-hex.sh  functions  functions.patch  hwmon-list-temps.sh  list-cpu-temp.sh  list-temps.sh  new-temp.sh  powertop_2.11-1build3_arm64.deb  regulatory.db  venus-firmware-reinstall  yoga_fw_extract.sh
C630/misc-apps/fastrpc-automake/src/: Makefile.am  fastrpc_apps_user.c
Documentation/: conf.py  index.rst
arch/: Kconfig
block/: .badblocks.o.cmd  .bdev.o.cmd  .bfq-cgroup.o.cmd  .bfq-iosched.o.cmd  .bfq-wf2q.o.cmd  .bfq.ko.cmd  .bfq.mod.cmd  .bfq.mod.o.cmd  .bfq.o.cmd  .bio-integrity.o.cmd  .bio.o.cmd  .blk-cgroup-rwstat.o.cmd  .blk-cgroup.o.cmd  .blk-core.o.cmd  .blk-crypto-fallback.o.cmd  .blk-crypto-profile.o.cmd  .blk-crypto-sysfs.o.cmd  .blk-crypto.o.cmd  .blk-flush.o.cmd  .blk-ia-ranges.o.cmd  .blk-integrity.o.cmd  .blk-ioc.o.cmd  .blk-lib.o.cmd  .blk-map.o.cmd  .blk-merge.o.cmd  .blk-mq-cpumap.o.cmd  .blk-mq-debugfs-zoned.o.cmd  .blk-mq-debugfs.o.cmd  .blk-mq-pci.o.cmd  .blk-mq-rdma.o.cmd  .blk-mq-sched.o.cmd  .blk-mq-sysfs.o.cmd  .blk-mq-tag.o.cmd  .blk-mq-virtio.o.cmd  .blk-mq.o.cmd  .blk-pm.o.cmd  .blk-rq-qos.o.cmd  .blk-settings.o.cmd  .blk-stat.o.cmd  .blk-sysfs.o.cmd  (+51 more)
certs/: .blacklist.o.cmd  .blacklist_hash_list.cmd  .blacklist_hashes.o.cmd  .built-in.a.cmd  .extract-cert.cmd  .modules.order.cmd  .signing_key.x509.cmd  .system_certificates.o.cmd  .system_keyring.o.cmd  .x509_certificate_list.cmd  Kconfig
crypto/: .842.o.cmd  .acompress.o.cmd  .aead.o.cmd  .aegis128-core.o.cmd  .aegis128-neon-inner.o.cmd  .aegis128-neon.o.cmd  .aegis128.ko.cmd  .aegis128.mod.cmd  .aegis128.mod.o.cmd  .aegis128.o.cmd  .aes_generic.o.cmd  .af_alg.ko.cmd  .af_alg.mod.cmd  .af_alg.mod.o.cmd  .af_alg.o.cmd  .ahash.o.cmd  .akcipher.o.cmd  .algapi.o.cmd  .algboss.o.cmd  .algif_aead.ko.cmd  .algif_aead.mod.cmd  .algif_aead.mod.o.cmd  .algif_aead.o.cmd  .algif_hash.ko.cmd  .algif_hash.mod.cmd  .algif_hash.mod.o.cmd  .algif_hash.o.cmd  .algif_rng.ko.cmd  .algif_rng.mod.cmd  .algif_rng.mod.o.cmd  .algif_rng.o.cmd  .algif_skcipher.ko.cmd  .algif_skcipher.mod.cmd  .algif_skcipher.mod.o.cmd  .algif_skcipher.o.cmd  .ansi_cprng.ko.cmd  .ansi_cprng.mod.cmd  .ansi_cprng.mod.o.cmd  .ansi_cprng.o.cmd  .anubis.ko.cmd  (+343 more)
debian/: changelog  control  files  rules
drivers/: .built-in.a.cmd  .modules.order.cmd  Makefile  modules.order
fs/: .aio.o.cmd  .anon_inodes.o.cmd  .attr.o.cmd  .bad_inode.o.cmd  .binfmt_elf.o.cmd  .binfmt_misc.ko.cmd  .binfmt_misc.mod.cmd  .binfmt_misc.mod.o.cmd  .binfmt_misc.o.cmd  .binfmt_script.o.cmd  .buffer.o.cmd  .built-in.a.cmd  .char_dev.o.cmd  (+82 more)
(+45135 files in other folders)
